More work on the Shadow theme.
Switched gopsutil with a temporary more stable fork.
Ping PostgreSQL upon connecting. We need a global solution for connection drops. A connection timeout, perhaps?
Added the rowmenu CSS class for styling sidebar menus.
Added the real_first_child CSS class, we might be able to get around using it by redoing the <form> nesting.
Added the rowlist CSS class.
Added the bgavatars CSS class.
Added avatars to the User Manager.
Added limited responsivity to the Shadow Theme, I might have broken some things in the other themes, I'll fix that soon!
A per-theme post-avatar-bg.jpg file is now used for the first topic layout rather than the global white-dot.jpg file.

--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -2,7 +2,7 @@
 	<div class="colstack_item colstack_head rowhead">
 		<div class="rowitem"><a>My Account</a></div>
 	</div>
-	<div class="colstack_item">
+	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="/user/edit/avatar/">Change Avatar</a></div>
 		<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
 		<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
