--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -11,7 +11,7 @@
 	{{end}}
 	<div class="colstack_item">
 		<form action="/user/edit/avatar/submit/" method="post" enctype="multipart/form-data">
-			<div class="formrow">
+			<div class="formrow real_first_child">
 				<div class="formitem formlabel"><a>Upload Avatar</a></div>
 				<div class="formitem"><input name="account-avatar" type="file" /></div>
 			</div>
