--- a/templates/panel-forums.html
+++ b/templates/panel-forums.html
@@ -9,7 +9,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Forums</a></div>
 	</div>
-	<div id="panel_forums" class="colstack_item">
+	<div id="panel_forums" class="colstack_item rowlist">
 		{{range .ItemList}}
 		<div class="rowitem editable_parent" style="{{if eq .ID 1}}border-bottom-style:solid;{{end}}">
 			<span class="panel_floater">
