--- a/templates/panel-groups.html
+++ b/templates/panel-groups.html
@@ -5,7 +5,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Groups</a></div>
 	</div>
-	<div id="panel_groups" class="colstack_item">
+	<div id="panel_groups" class="colstack_item rowlist">
 		{{range .ItemList}}
 		<div class="rowitem panel_compactrow editable_parent">
 			<a href="/panel/groups/edit/{{.ID}}" class="panel_upshift">{{.Name}}</a>
