--- a/themes/cosmo-conflux/public/main.css
+++ b/themes/cosmo-conflux/public/main.css
@@ -188,12 +188,18 @@ hr { color: silver; border: 1px solid silver; }
 .rowitem:not(:last-child) { border-bottom: 1px dotted #ccc; }
 .rowblock:first-of-type { margin-top: 8px; }
 
-.datarow {
+.datarow, .rowlist .rowitem {
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
 .rowsmall {
 	font-size:12px;
+}
+
+.rowlist.bgavatars .rowitem {
+	background-repeat: no-repeat;
+	background-size: 40px;
+	padding-left: 47px;
 }
 
 .rowhead .rowitem, .colhead, .opthead .rowitem, .colstack_head .rowitem {
