--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -5,6 +5,7 @@
 		<div class="rowitem"><a>Emails</a></div>
 	</div>
 	<div class="colstack_item">
+		<!-- TO-DO: Do we need this inline CSS? -->
 		{{range .ItemList}}
 		<div class="rowitem" style="font-weight: normal;">
 			<a style="text-transform: none;">{{.Email}}</a>
