--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="colstack_item">
 		<form action="/user/edit/critical/submit/" method="post">
-			<div class="formrow">
+			<div class="formrow real_first_child">
 				<div class="formitem formlabel"><a>Current Password</a></div>
 				<div class="formitem"><input name="account-current-password" type="password" placeholder="*****" /></div>
 			</div>
@@ -19,7 +19,7 @@
 				<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
 			</div>
 			<div class="formrow">
-				<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
+				<div class="formitem"><button name="account-button" class="formbutton form_middle_button">Update</button></div>
 			</div>
 		</form>
 	</div>
