--- a/templates/panel-forum-edit.html
+++ b/templates/panel-forum-edit.html
@@ -4,7 +4,6 @@
 var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_access','default','custom']};
 </script>
 
-</div>
 <div class="colstack_right">
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>{{.Name}} Forum</a></div>
@@ -41,14 +40,14 @@ var form_vars = {'perm_preset': ['can_moderate','can_post','read_only','no_acces
 			</div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="panel-button" class="formbutton">Update Forum</button></div>
+			<div class="formitem"><button name="panel-button" class="formbutton form_middle_button">Update Forum</button></div>
 		</div>
 		</form>
 	</div>
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Forum Permissions</a></div>
 	</div>
-	<div id="forum_quick_perms" class="colstack_item">
+	<div id="forum_quick_perms" class="colstack_item rowlist">
 		{{range .Groups}}
 		<div class="formrow">
 			<div class="formitem editable_parent">
