--- a/templates/panel-inner-menu.html
+++ b/templates/panel-inner-menu.html
@@ -1,7 +1,7 @@
 <div class="colstack_item colstack_head">
 	<div class="rowitem"><a href="/panel/">Control Panel</a></div>
 </div>
-<div class="colstack_item">
+<div class="colstack_item rowmenu">
 	<div class="rowitem passive"><a href="/panel/users/">Users</a></div>
 	<div class="rowitem passive"><a href="/panel/groups/">Groups</a></div>
 	{{if .CurrentUser.Perms.ManageForums}}<div class="rowitem passive"><a href="/panel/forums/">Forums</a></div>{{end}}
