--- a/templates/panel-settings.html
+++ b/templates/panel-settings.html
@@ -4,7 +4,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a>Settings</a></div>
 	</div>
-	<div id="panel_settings" class="colstack_item">
+	<div id="panel_settings" class="colstack_item rowlist">
 		{{range $key, $value := .Something}}
 		<div class="rowitem panel_compactrow editable_parent">
 			<a href="/panel/settings/edit/{{$key}}" class="editable_block panel_upshift">{{$key}}</a>
