--- a/templates/panel-themes.html
+++ b/templates/panel-themes.html
@@ -3,7 +3,7 @@
 	<div class="colstack_item colstack_head">
 		<div class="rowitem"><a href="/panel/themes/">Theme Manager</a></div>
 	</div>
-	<div class="colstack_item">
+	<div class="colstack_item rowmenu">
 		<div class="rowitem passive"><a href="#">Widgets</a></div>
 	</div>
 {{template "panel-inner-menu.html" . }}
