Shadow is now fully responsive and almost done! Just a few places like the dashboard and a few glitches to patch up! Fixed the indentation in alerts.go, Atom replaced the tabs with spaces for some reason x.x Made the friendly URL logic more flexible. Made the supermod menu item hiding more JS friendly. strconv is now an optional dependency for compiled template files. Revamped the profile template.

--- a/templates/forums.html
+++ b/templates/forums.html
@@ -13,7 +13,7 @@
 		</span>{{end}}
 
 		<span style="float: right;">
-			<a href="/topic/{{.LastTopicSlug}}" style="float: right;font-size: 14px;">{{.LastTopic}}</a>
+			<a href="{{.LastTopicLink}}" style="float: right;font-size: 14px;">{{.LastTopic}}</a>
 			{{if .LastTopicTime}}<br /><span class="rowsmall">{{.LastTopicTime}}</span>{{end}}
 		</span>
 		<div style="clear: both;"></div>
