--- a/themes/cosmo/public/main.css
+++ b/themes/cosmo/public/main.css
@@ -447,6 +447,12 @@ button .big { padding: 6px; }*/
 	padding-bottom: 3px;
 }
 
+#profile_comments .rowitem {
+	background-repeat: no-repeat, repeat-y;
+	background-size: 128px;
+	padding-left: 136px;
+}
+
 .postQuote {
 	border-radius: 4px;
 	padding: 5px;
