--- a/templates/topics.html
+++ b/templates/topics.html
@@ -9,8 +9,8 @@
 			<span class="lastReplyAt">{{.LastReplyAt}}</span>
 		</span>
 		<span>
-			<a class="rowtopic" href="/topic/{{.Slug}}.{{.ID}}">{{.Title}}</a> {{if .ForumName}}<a class="rowsmall" href="{{.ForumLink}}">{{.ForumName}}</a>{{end}}
-			<br /><a class="rowsmall" href="/user/{{.UserSlug}}.{{.CreatedBy}}">Starter: {{.CreatedByName}}</a>
+			<a class="rowtopic" href="{{.Link}}">{{.Title}}</a> {{if .ForumName}}<a class="rowsmall" href="{{.ForumLink}}">{{.ForumName}}</a>{{end}}
+			<br /><a class="rowsmall" href="{{.UserLink}}">Starter: {{.CreatedByName}}</a>
 			{{if .Is_Closed}}<span class="rowsmall topic_status_e topic_status_closed" title="Status: Closed"> | &#x1F512;&#xFE0E{{end}}</span>
 		</span>
 	</div>
